# peko-tools

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE-app.txt  NOTICE-native.txt  README.md  THIRD-PARTY-NOTICES.txt  about.hbs  about.toml  rust-toolchain.toml
.claude/rules/: peko-gc.md
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml
crates/peko-cli/: Cargo.toml  README.md
crates/peko-cli/src/: bridge.rs  deploy.rs  deploy_app.rs  deploy_pack.rs  deploy_seal.rs  keychain.rs  main.rs  proc.rs  testtmp.rs
crates/peko-cli/src/auth/: mod.rs
crates/peko-cli/src/bundler/: android.rs  authenticode_sign.rs  ios.rs  linux.rs  macos.rs  mod.rs  msix.rs  signing.rs  windows.rs
crates/peko-cli/src/bundler/cartool/: carinfo.rs  carwriter.rs  mod.rs
crates/peko-cli/src/cli/: data_structures.rs  mod.rs  reporting.rs
crates/peko-cli/src/commands/: add.rs  apps.rs  bridge.rs  bridge_client.rs  build.rs  check.rs  clangflags.rs  clean.rs  compile.rs  demo.rs  deploy.rs  devtools.rs  format.rs  icon.rs  install.rs  keys.rs  link.rs  login.rs  logout.rs  mod.rs  pkg.rs  project.rs  publish.rs  remove.rs  run.rs  search.rs  test.rs  toolchain.rs  update.rs  verify.rs  version.rs  whoami.rs
crates/peko-cli/src/commands/help/: add.txt  apps.txt  bridge.txt  build.txt  check.txt  clangflags.txt  clean.txt  compile.txt  demo.txt  deploy.txt  format.txt  icon.txt  install.txt  keys.txt  link.txt  login.txt  logout.txt  pkg.txt  project.txt  publish.txt  remove.txt  run.txt  search.txt  setup.txt  test.txt  toolchain.txt  update.txt  verify.txt  version.txt  whoami.txt
crates/peko-cli/src/commands/setup/: apple.rs  download.rs  extract.rs  github.rs  host.rs  install.rs  layout.rs  mod.rs  pathenv.rs  xwin.rs
crates/peko-cli/src/execution/: execution_mod.rs  incremental.rs  mod.rs  native.rs  prebuild.rs
crates/peko-cli/src/packager/: builder.rs  manager.rs  mod.rs  ziputil.rs
crates/peko-cli/src/project/: mod.rs
crates/peko-cli/src/registry/: cache.rs  client.rs  gated.rs  index.rs  install.rs  mod.rs  pack.rs  publish.rs  resolver.rs  verify.rs
crates/peko-cli/src/toolchain/: mod.rs  resolve.rs  version.rs
crates/peko-core/: Cargo.toml  README.md
crates/peko-core/src/: error.rs  format.rs  lib.rs
crates/peko-core/src/asts/: data_structures.rs  declarations.rs  expressions.rs  mod.rs  statements.rs  tests.rs  values.rs
crates/peko-core/src/config/: container.rs  lock.rs  manifest.rs  mod.rs  prebuilt.rs  toolchain.rs
crates/peko-core/src/diagnostics/: mod.rs  tests.rs
crates/peko-core/src/execution/: data_structures.rs  mod.rs
crates/peko-core/src/ffi/: mod.rs  parser.rs
crates/peko-core/src/formatter/: context.rs  data_structures.rs  declaration_fmt.rs  expression_fmt.rs  mod.rs  statement_fmt.rs  value_fmt.rs
crates/peko-core/src/lexer/: mod.rs  tests.rs
crates/peko-core/src/parser/: mod.rs  tests.rs
crates/peko-core/src/simulator/: context.rs  data_structures.rs  declaration_sims.rs  expression_sims.rs  mod.rs  statement_sims.rs  value.rs  value_sims.rs
crates/peko-core/src/types/: mod.rs  tests.rs
crates/peko-llvm/: Cargo.toml  README.md  build.rs
crates/peko-llvm/rust_lld/: README.md  lldentry.cc
crates/peko-llvm/rust_lld/windows/: lldentry.lib
crates/peko-llvm/src/: lib.rs
crates/peko-llvm/src/codegen/: context.rs  data_structures.rs  declaration_gen.rs  expression_gen.rs  mod.rs  statement_gen.rs  symbol.rs  value_gen.rs
crates/peko-llvm/src/codegen/builders/: functions.rs  globals.rs  high_level.rs  llvm_arithmetic.rs  llvm_constants.rs  llvm_instructions.rs  llvm_memory.rs  llvm_types.rs  mod.rs  modules.rs  scope.rs
crates/peko-llvm/src/linker/: mod.rs
crates/peko-lsp/: Cargo.toml  README.md  build.sh
crates/peko-lsp/src/: lib.rs  main.rs
crates/peko-lsp/src/analyzer/: document.rs  helpers.rs  mod.rs  semantic_tokens.rs
crates/peko-lsp/src/server/: analysis.rs  backend.rs  converters.rs  documents.rs  encoding.rs  mod.rs
docs/: Peko_V2_Master_Reference.md  goals.md  ide-tooling-roadmap.md  llvm18-bundling-plan.md  pekoui-plan.md  ssr-hosting-plan.md
editor-grammars/: LICENSE  README.md  grammar.js  package.json  pekoscript.tmLanguage.json  tree-sitter.json
editor-grammars/src/: grammar.json  node-types.json  parser.c
scripts/: gen-notices.sh
std/: collections.peko  core.peko  crypto.peko  fs.peko  io.peko  json.peko  lexer.peko  peko.toml  runtime.peko  sockets.peko  threads.peko  xml.peko
std/c/runtime/: audit.c  compiler_abi.c  gc.peko.h  heap.c  mark.c  pgc.c  stackmap.c  threads.c
std/c/runtime/include/: pgc_internal.h
toolkit/: peko.h
toolkit/pekoui/: README.md  app.peko  assets.peko  bridge.peko  dialog.peko  env.peko  keychain.peko  lib.peko  menu.peko  paths.peko  peko.toml  pekoui-0.1.0.pkpkg  storage.peko  webview.peko
toolkit/pekoui/c/appdir/: appdir.peko.h  peko_appdir.c
toolkit/pekoui/c/assets/: assets.peko.h  peko_asset_bytes.c  peko_asset_server.c  peko_assets.h  peko_assets_android.c  peko_assets_apple.m  peko_assets_linux.c  peko_assets_windows.c
toolkit/pekoui/c/deeplink/: deeplink.peko.h  peko_deeplink_android.c  peko_deeplink_apple.m  peko_deeplink_linux.c  peko_deeplink_windows.c
toolkit/pekoui/c/dialog/: dialog.peko.h  peko_dialog_apple.m  peko_dialog_fallback.c  peko_dialog_linux.c  peko_dialog_windows.c
toolkit/pekoui/c/env/: env.peko.h  peko_env.c
toolkit/pekoui/client/: index.d.ts  index.js  package.json  react.d.ts  react.js  vue.d.ts  vue.js
toolkit/pekoui/server/: bridge-server.mjs
toolkit/std/: README.md  bundle.peko  collections.peko  core.peko  crypto.peko  fs.peko  io.peko  json.peko  lexer.peko  lib.peko  peko.toml  process.peko  random.peko  runtime.peko  sockets.peko  std-0.1.0.pkpkg  threads.peko  webview.peko  xml.peko
toolkit/std/c/core/: hash.c  (+4 more)
toolkit/toolchains/android/: toolchain.toml  toolchain.x86_64.toml
toolkit/toolchains/linux/: assemble-gtk-headers.sh
toolkit/toolchains/windows/: toolchain.toml
tools/llvm18/: README.md  build-linux.sh  build-macos.sh  build-windows.ps1  lib.sh  run-linux-docker.sh  strip.sh
(+63 files in other folders)
