[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "LicenseRef-PSAL-1.0"
authors = ["Peko UI Technologies LLC"]
repository = "https://github.com/peko-lang/peko"

[workspace.dependencies]
peko-core = { version = "1.0.0", path = "crates/peko-core" }
peko-llvm = { version = "1.0.0", path = "crates/peko-llvm" }

tokio = { version = "1.47" }
thiserror = "2"
derive-new = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
itertools = "0.14"
grass = "0.13"
