[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["Peko UI Technologies LLC"]
repository = "https://github.com/official-peko/peko-tools"

[workspace.dependencies]
peko-core = { version = "2.0.0", path = "crates/peko-core" }
peko-llvm = { version = "2.0.0", path = "crates/peko-llvm" }
peko-lsp = { version = "2.0.0", path = "crates/peko-lsp" }

tokio = { version = "1.47" }
thiserror = "2"
derive-new = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
itertools = "0.14"
grass = "0.13"
