[package]
name = "peko-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Console interface for the Pekoscript toolchain"

[[bin]]
name = "peko"
path = "src/main.rs"

[dependencies]
peko-core = { workspace = true }
peko-llvm = { workspace = true }
peko-lsp = { workspace = true }

tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
derive-new = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }

console = "0.16"
dialoguer = { version = "0.11", default-features = false }
indicatif = "0.18"
rustyline = "15"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
zstd = "0.13"
lzma-rs = "0.3"
dirs = "6"
sha2 = "0.10"
getrandom = "0.2"
semver = "1"
image = "0.25"
tempfile = "3"
icns = "0.3"
ico = "0.4"
lzfse = "0.2"
backhand = { version = "0.23", default-features = false, features = ["zstd", "gzip"] }
merkle_hash = "3"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
grass = "0.13"
ctrlc = "3"
notify = "6"
tokio-tungstenite = "0.24"
futures-util = "0.3"
apple-codesign = "0.29.0"
# Matches apple-codesign's own x509-certificate; names the certificate type its
# PKCS#12 parser returns, used by signing-key verification.
x509-certificate = "0.24.0"
# Decode a key file the IDE streams in as base64 over stdin (a dropped file's
# bytes; keeps binary fidelity by decoding in Rust rather than the webview).
base64 = "0.22"
keyring-core = "1.0.0"
app-store-connect = "0.7.0"
# Project-wide search/replace for the IDE: regex matching over a recursive walk.
regex = "1"
walkdir = "2"
xwin = { version = "0.9", default-features = false }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }
