[package]
name = "peko-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core lexer, parser, type system, diagnostics, and static analyzer for the Pekoscript compiler."
readme = "README.md"
keywords = ["compiler", "language", "pekoscript", "parser", "lexer"]
categories = ["compilers", "parser-implementations"]

[dependencies]
derive-new = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
semver = "1.0.28"
serde = { workspace = true }
thiserror = { workspace = true }
toml = "1.1.2"
toml_edit = "0.25.12"
